# rust_lab

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/scripts/: prepare-node-projects.sh
.github/workflows/: test.yml
00001_hello_world/: Cargo.toml
00002_hello_cargo/: Cargo.toml  README.md
00002_hello_cargo/src/: main.rs
00003_unit_tests/: Cargo.toml
00004_rust_book_1/: README.md
00004_rust_book_1/00001/: Cargo.toml
00004_rust_book_1/task_001/: Cargo.toml
00004_rust_book_1/task_01/: hallo.rs
00005_rust_book_2/: README.md
00005_rust_book_2/00001_hello_world/: Cargo.toml
00005_rust_book_2/00002_hello_cargo/: Cargo.toml
00005_rust_book_2/00003_guessing_game/: Cargo.toml
00005_rust_book_2/001_hello_world/: Cargo.toml
00011_web_service/: Cargo.toml  README.md  db.sql
00011_web_service/http/: health.http  todo.http
00011_web_service/src/: db.rs  error.rs  handler.rs  main.rs
00012_web_frontend/: Cargo.toml  README.md  index.html
00012_web_frontend/src/: lib.rs
00013_web_fullstack/: Cargo.toml
00014_actix_simple/: Cargo.toml
00014_actix_simple/src/: main.rs
00015_web_warp_and_vite_to_single_binary/: Cargo.toml  README.md
00015_web_warp_and_vite_to_single_binary/http/: hello.http
00015_web_warp_and_vite_to_single_binary/src/: main.rs
00015_web_warp_and_vite_to_single_binary/web/: package-lock.json  package.json
00100_tui/ratatui/4-stopwatch/: Cargo.toml
00100_tui/ratatui/4-stopwatch/src/: main.rs
00200_tensor/: README.md
00200_tensor/1-port-sniffer/: Cargo.toml
00300_leptos/: README.md
(+15 files in other folders)
