[workspace]
resolver = "2"
members = [
    "00001_hello_world",
    "00002_hello_cargo",
    "00003_unit_tests",

    "00004_rust_book_1/*",
    "00005_rust_book_2/*",

    "00011_web_service",
    "00012_web_frontend",
    "00013_web_fullstack",

    "00014_actix_simple",

    "00015_web_warp_and_vite_to_single_binary",

    "00100_tui/ratatui/*",
    "00200_tensor/*"
]
